@@ -1,3 +1,5 @@
+DIST psi-cleaner-0.2.7_pre3076.tar.xz 20332 RMD160 6eebf7ae6f502f0dc386efd1157d234f60ec3968 SHA1 3d16ef6ca3dba51e8e7b2be32d7a045146a092e7 SHA256 f963b47830357880a10284fab62a2768864c7caedbb8b703d5fc08d712a6acd9
+EBUILD psi-cleaner-0.2.7_pre3076.ebuild 227 RMD160 0c334b34e32edacaeeec3713077072590dec9ace SHA1 1b0fb4e61efe89929fbdefce22df6bce60d4f3ff SHA256 0cfd722bb8579843bfa93180f9f0c3f20515feda7030a9d7e41908beb9908443
 EBUILD psi-cleaner-9999.ebuild 218 RMD160 f64b82387d9e6dda17e2dad76f4cb8f5e2dd5760 SHA1 6f20b41bc765e142fe8b978ecf4df6d89f5250e6 SHA256 3a797c934958d45c33c3bcfcca199377bc68e1bc0d0288a85e22a1a27e0c483e
-MISC ChangeLog 201 RMD160 c51cf9ea1663642333c04b24af7e267d45b80c3a SHA1 20e290bf007a0e1ded487318246def3cd4273421 SHA256 475cee0ad7a7aae73f9183196ae5140cc3446a48e35e4b551359a5e119076170
+MISC ChangeLog 299 RMD160 26ebad9f413fc83e2311e79d597b774ae75e0d54 SHA1 77709f654615076429301b2dd948917319925cee SHA256 b79784ff3285e466fc420b3aacaf4d6d98bc24c46a1ce46d3d29da3b5e49516e
 MISC metadata.xml 339 RMD160 b0c50750506554cfda1c83b3377226563e675760 SHA1 953d235a6fe62014a5501798feaba2a8edb902ea SHA256 d789a99790d69b14b44ce43f0460f2b20c963c0ad42d677259da3ffaf9e8f705
